# model-service

./: .gitignore  README.md  pyproject.toml
model_service/: main.py
model_service/application/command_callbacks/: create_feed_forward_network_callback.py  create_table_dataset_callback.py  create_training_session_callback.py  handle_command_callback_errors.py  start_ffn_training_callback.py
model_service/application/commands/: create_feed_forward_network.py  create_table_dataset.py  create_training_session.py  start_ffn_training.py
model_service/application/domain_event_handlers/: notify_on_epoch_finished_handler.py  save_result_on_epoch_finished_handler.py
model_service/application/error_handling/: handle_command_callback_errors.py
model_service/application/event_handlers/: save_result_on_epoch_finished.py
model_service/setup_utils/: dependencies.py  domain_events.py  integration_events.py  message_callbacks.py  mongo_db.py  rabbit_mq.py  s3.py
model_service/tests/: conftest.py  test_start_ffn_training.py  test_train_feed_forward_network.py
model_service/utility/: log_function.py
tests/: conftest.py  main.py  test_start_ffn_training.py  test_train_feed_forward_network.py
tests/fixtures/: command.py  data.py  epoch_finished_handler_mock.py  execution_context.py  feed_forward_network_id.py  labels_column.py  table_dataset_id.py  table_dataset_repository.py  training_completed_publisher_mock.py  training_epoch_finished_publisher_mock.py  training_result_repository.py  training_session.py  training_session_id.py  training_session_repository.py  user.py
(+110 files in other folders)
